--- a/SCOMP_Project/SCOMP.qsf
+++ b/SCOMP_Project/SCOMP.qsf
@@ -214,4 +214,7 @@ set_location_assignment PIN_AB15 -to GSENSOR_SCLK
 set_global_assignment -name BDF_FILE DPs.bdf
 set_global_assignment -name VHDL_FILE SQ_GEN.vhd
 set_location_assignment PIN_AB5 -to Arduino_IO[0]
+set_global_assignment -name VHDL_FILE Wave_Gen.vhd
+set_location_assignment PIN_A7 -to KEY1
+set_global_assignment -name VHDL_FILE Keys_IN.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
